# vibefinance

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.agent/workflows/: tdd_protocol.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .context.md  main.py  pyproject.toml
backend/core/: config.py
backend/models/: asset.py  balance.py  session.py  user.py
backend/services/: .context.md  auth.py  encryption.py
backend/tests/: factories.py  test_auth_service.py
backend/tests/data/: user_test_data.py
backend/tests/models/: test_user.py
backend/tests/unit/: README.md  conftest.py  factories.py  test_assets.py  test_auth_service.py  test_auth_session.py
backend/tests/unit/data/: auth_test_data.py  session_test_data.py
backend/tests/unit/models/: README.md  test_user.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: DEPLOYMENT.md  TESTING_STRATEGY.md
docs/planning/: evaluation_report.md  implementation_plan.md
docs/reports/: TEST_CASES.md
frontend/: .context.md
scripts/: dev.py  generate_test_docs.py
